# althea-L1

./: .build.sh  .gitignore  .gitmodules  .golangci.yml  Dockerfile  Makefile  README.md  buf.yaml  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: automated-release.yml  go.yml  integration-tests.yml  rust.yml
app/: app.go  assert.go  encoding.go  export.go  genesis.go  migrate.go  pubkey_replacement.go  sigverify.go  sim_test.go  testutil.go
app/ante/: account_type.go  account_type_test.go  ante.go  ante_test.go  charge_gasfree_fees.go  charge_gasfree_fees_test.go  comission.go  cosmos_handler_test.go  eth_account_verification.go  eth_set_pubkey.go  eth_set_pubkey_test.go  group_message_limiter.go  group_message_limiter_test.go  handler_options.go  interfaces.go  pubkey_account.go  sig_verify_test.go  utils_test.go  vesting.go
app/params/: proto.go
app/upgrades/: register.go
app/upgrades/cardinal/: README.md  handler.go  handler_test.go
app/upgrades/example/: README.md  handler.go
app/upgrades/neutrino/: README.md  handler.go
app/upgrades/tethys/: README.md  handler.go
cmd/althea/: genaccounts.go  main.go  overrides.go  root.go  testnet.go  validate_genesis.go
cmd/althea/cmd/: root.go  validate_genesis.go
cmd/gaiacli/: main.go
cmd/gaiad/: main.go
config/: chain_config.go  chain_defaults.go
contracts/: abi_coder.go  croc_policy.go  erc20.go  erc20DirectBalanceManipulation.go  erc20burnable.go  erc20maliciousdelayed.go  liquid_account.go  tokenized_account.go
contracts/compiled/: CrocPolicy.json  ERC20Burnable.json  ERC20DirectBalanceManipulation.json  ERC20MaliciousDelayed.json  ERC20MinterBurnerDecimals.json  ERC20PresetMinterPauser.json  LiquidInfrastructureNFT.json  OwnableApprovableERC721.json  TokenizedAccountNFT.json  WETH9.json
contrib/local/: protocgen.sh  setup_node.sh
crypto/keyring/: keyring.go
docs/: environment-setup.md  modifying-integration-tests.md
docs/althea/: testnet-1.md
docs/althea/althea-testnet-docs/: appendix.md  setting-up-a-validator-manual.md  testing-gravity-portal.md  testing-gravity.md
ibcutils/: module.go  module_test.go  utils.go  utils_test.go
ibcutils/testing/: app.go  chain.go  coordinator.go  endpoint.go  events.go  path.go  sdk_test.go  values.go
integration_tests/: Cargo.toml
integration_tests/alt/: Cargo.toml
integration_tests/alt/src/: args.rs  config.rs  cosmos.rs  dex.rs  erc20.rs  erc721.rs  long_path.rs  main.rs  utils.rs
integration_tests/althea_proto/: Cargo.toml  README.md
integration_tests/althea_proto/src/: lib.rs
integration_tests/althea_proto/src/prost/: canto.csr.v1.rs  canto.epochs.v1.rs  canto.erc20.v1.rs  canto.fees.v1.rs  canto.govshuttle.v1.rs  canto.inflation.v1.rs  canto.recovery.v1.rs  canto.vesting.v1.rs  ethermint.crypto.v1.ethsecp256k1.rs  ethermint.evm.v1.rs  ethermint.feemarket.v1.rs  ethermint.types.v1.rs  lockup.v1.rs  microtx.v1.rs
integration_tests/proto_build/src/: main.rs
integration_tests/test_runner/: Cargo.toml
integration_tests/test_runner/src/: bootstrapping.rs  dex_utils.rs  evm_utils.rs  ibc_utils.rs  lib.rs  type_urls.rs  utils.rs
integration_tests/test_runner/src/tests/: deprecated_proposals.rs  dex.rs  erc20_conversion.rs  evm_fee_burning.rs  execute_contract_proposal.rs  gasfree_erc20.rs  gov_spend_test.rs  ica_host.rs  liquid_accounts.rs  lockup.rs  microtx_fees.rs  mod.rs  native_token.rs  onboarding.rs  tokenized_accounts.rs  upgrade.rs
proto/: buf.yaml
scripts/: compile-contracts-for-go.sh
solidity/: README.md  contract-deployer.ts  hardhat.config.ts  package-lock.json  package.json
solidity/contracts/: ERC20Burnable.sol  ERC20DirectBalanceManipulation.sol  ERC20MaliciousDelayed.sol  ERC20MinterBurnerDecimals.sol  ERC20PresetMinterPauser.sol  GovSpendTest.sol  LiquidInfrastructureERC20.sol  LiquidInfrastructureNFT.sol  OwnableApprovableERC721.sol  TestERC20A.sol  TestERC20B.sol  TestERC20C.sol  TestERC721A.sol  TokenizedAccountNFT.sol  WALTHEA.sol  WETH9.sol
solidity/scripts/: contract-deployer.sh
solidity/test/: TestWALTHEA.ts  liquidAccount.ts  tokenizedAccount.ts
solidity/test-utils/: index.ts  pure.ts
tests/: all-up-test-ci.sh  manual-upgrade-test.sh  run-tests.sh  run-upgrade-test.sh  start-chains.sh
tests/assets/: ibc-relayer-config.toml  relayer-mnemonic.txt
tests/container-scripts/: all-up-test-internal.sh  integration-tests.sh  manual-upgrade-test-internal.sh  reload-code.sh  run-testnet.sh  setup-ibc-validators.sh  setup-validators.sh  start-dlv.sh  upgrade-test-internal.sh
tests/dockerfile/: Dockerfile
testutil/: mock_ibctransfer.go
testutil/network/: network.go  network_test.go  util.go
x/common/: deduct_fee.go
x/erc20/: genesis.go  genesis_test.go  handler.go  module.go  proposal_handler.go
x/gasfree/: ante.go  ante_test.go  module.go  module_test.go
x/lockup/: ante.go  ante_test.go  module.go
x/microtx/: abci.go  abci_test.go  handler.go  module.go  module_test.go
x/nativedex/: genesis.go  module.go  proposal_handler.go
x/onboarding/: genesis.go  genesis_test.go  ibc_middleware.go  ibc_module_test.go  module.go
(+179 files in other folders)
