[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Christian Borst <christian@althea.systems>"]
edition = "2018"
description = "Integration tests and their associated runner for the Althea Blockchain"

[lib]
name = "test_runner"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "test-runner"
path = "src/bin/main.rs"

[dependencies]

althea_proto = "0.6"
prost = "0.12"
prost-types = "0.12"
bytes = "1"
deep_space = {version = "2", features = ["althea", "ethermint"]}
serde_derive = "1.0"
clarity = "1"
web30 = "1"
docopt = "1"
serde = "1.0"
actix = "0.13"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
num = "0.4.0"
num256 = "0.3"
log = "0.4"
env_logger = "0.9"
tokio = "1.4.0"
rand = "0.8"
tonic = "0.10"
futures = "0.3"
serde_json = "1.0"
sha256 = "1"
