[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Christian Borst <christian@althea.systems>"]
edition = "2018"
description = "Integration tests and their associated runner for the Althea Blockchain"

[lib]
name = "test_runner"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "test-runner"
path = "src/bin/main.rs"

[dependencies]

althea_proto = {workspace = true}
prost = "0.12"
prost-types = "0.12"
bytes = "1"
deep_space = {workspace = true}
serde_derive = "1.0"
clarity = {workspace = true}
web30 = {workspace = true}
num256 = {workspace = true}
docopt = "1"
serde = "1.0"
actix = {workspace = true}
actix-rt = {workspace = true}
lazy_static = "1"
url = "2"
num = {workspace = true}
num-traits = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
tokio = "1.4.0"
rand = "0.8"
tonic = "0.10"
futures = "0.3"
serde_json = "1.0"
sha256 = "1"
